--- a/style.css
+++ b/style.css
@@ -1,4 +1,79 @@
 html {
-    background: url('img/background.svg') bottom center;
-    background-size: cover;
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    background: url('img/background-2.svg');
+    background-size: stretch;
+   
+}
+body {
+    background-color: transparent;
+}
+
+.game-panel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.player-moves {
+    display: flex;
+    flex-direction: column;
+}
+
+.select-move {
+    display: block;
+    height: 20rem;
+    width: 20rem;
+    padding: 0;
+    border: .4rem solid white;
+    border-radius: .5rem;
+    margin: .5rem;
+}
+
+.select-move img {
+    height: 20rem;
+    width: 20rem;
+}
+
+.select-move:hover {
+    border: .4rem solid #FF717E;
+}
+
+.computer-move, .versus {
+    display: block;
+    height: 40rem;
+    width: 40rem;
+}
+
+.header {
+    font-size: 4em;
+    text-align: center;
+    text-shadow: 2px 2px black;
+    transition: all 2s ease;
+}
+
+.header:hover {
+    color: #FF717E;
+}
+
+.scoreboard {
+    border: .4rem solid white;
+    border-radius: .5rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem .5rem;
+    text-align: center;
+    color: white;
+    background: rgba(0,0,0,0.4);
+    text-shadow: 0 0 .5rem black;
+}
+
+.middle-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+   
 }
