Completed the Javascript for the project and fixed a few issues with CSS and HTML. Game is pretty much finished but I may add animation later on.

--- a/style.css
+++ b/style.css
@@ -15,12 +15,16 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-content: center;
     align-items: center;
 }
 
 .player-moves {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    height: 40rem;
+    width: 40rem;
 }
 
 .select-move {
@@ -75,5 +79,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-   
+    align-items: center;
+}
+
+.computerBoardStyling {
+    color: #FF717E;
 }
