--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     border: .4rem solid white;
     border-radius: .5rem;
     margin: .5rem;
+    background-color: transparent;
 }
 
 .select-move img {
@@ -54,6 +55,7 @@ body {
 
 .header {
     font-size: 4em;
+    color: white;
     text-align: center;
     text-shadow: 2px 2px black;
     transition: all 2s ease;
